--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "drizzle-orm": "^0.39.1"
 },
 "devDependencies": {
+  "esbuild": "^0.25.0",
   "tsx": "^4.19.1",
   "typescript": "^5.6.3",
   "@types/express": "^4.17.21",
