--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "dev": "NODE_ENV=development tsx server/index.ts",
-  "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-  "start": "NODE_ENV=production node dist/index.js"
-},
+    "dev": "NODE_ENV=development tsx server/index.ts",
+    "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "NODE_ENV=production node dist/index.js"
+  },
   "dependencies": {
-  "esbuild": "^0.25.0",
-  "express": "^4.21.2",
-  "express-session": "^1.18.1",
-  "connect-pg-simple": "^10.0.0",
-  "memorystore": "^1.6.7",
-  "passport": "^0.7.0",
-  "passport-local": "^1.0.0",
-  "@neondatabase/serverless": "^0.10.4",
-  "drizzle-orm": "^0.39.1"
-},
-"devDependencies": {
-  "esbuild": "^0.25.0",
-  "tsx": "^4.19.1",
-  "typescript": "^5.6.3",
-  "@types/express": "^4.17.21",
-  "@types/express-session": "^1.18.0",
-  "@types/node": "^20.16.11",
-  "@types/passport-local": "^1.0.38"
-}
-
+    "@neondatabase/serverless": "^0.10.4",
+    "connect-pg-simple": "^10.0.0",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-zod": "^0.8.2",
+    "esbuild": "^0.25.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "memorystore": "^1.6.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^20.16.11",
+    "@types/passport-local": "^1.0.38",
+    "esbuild": "^0.25.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
+  }
 }
