Fix: Add ws dependency for WebSocket

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-session": "^1.18.1",
     "memorystore": "^1.6.7",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
